# Test

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  conanfile.txt
.github/actions/building/: action.yml
.github/actions/coverage/: action.yml
.github/actions/documentation/: action.yml
.github/actions/style/: action.yml
.github/workflows/: MainAction.yml
src/: main.c
tests/: test_main.c
